--- a/常用代码/实现抖音刚刚看过功能/index.css
+++ b/常用代码/实现抖音刚刚看过功能/index.css
@@ -17,3 +17,14 @@ img{
     width: 290px;
     height: 200px;
 }
+.container{
+    padding: 20px;
+    flex-wrap: wrap;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 20px;
+}
+.playing{
+    border: 2px solid springgreen;
+}
